--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,14 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "requests>=2.32.5",
+    "plyer>=2.1.0",
+    "dbus-python>=1.4.0",
 ]
 
 [dependency-groups]
 dev = [
     "pyinstaller>=6.17.0",
 ]
+
+[tool.mypy]
+ignore_missing_imports = true
